# Advent-Of-Code

./: .gitignore  LICENSE.md  README.md  go.mod  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  results.json
.devcontainer/: Dockerfile  devcontainer.json
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: index.ts  utils.ts
cli/src/commands/: gen-readme.ts  init.ts  input.ts  language-stats.ts  run.ts
events/2015/01/: Cargo.toml  README.md  package.json  solution.go  solution.py  solution.rs  solution.ts
events/2015/02/: Cargo.toml  README.md  package.json  solution.go  solution.py  solution.rs  solution.ts
events/2015/03/: Cargo.toml  README.md  package.json  solution.go  solution.py  solution.rs  solution.ts
events/2015/04/: Cargo.toml  README.md  package.json  solution.go  solution.py  solution.rs  solution.ts
events/2015/05/: Cargo.toml  README.md  package.json  solution.go  solution.py  solution.rs  solution.ts
events/2015/06/: Cargo.toml  README.md  log.txt  package.json  solution.go  solution.py  solution.rs  solution.ts
events/2015/07/: Cargo.toml  README.md  package.json  solution.go  solution.py  solution.rs  solution.ts
events/2015/08/: Cargo.toml  README.md  package.json  solution.go  solution.py  solution.rs  solution.ts
events/2015/09/: Cargo.toml  README.md  log.txt  package.json  solution.go  solution.py  solution.rs  solution.ts
events/2015/10/: Cargo.toml  README.md  package.json  (+5 more)
utils/python/: input.py  performance.py  types.py
utils/ts/: measurePerformance.ts  package.json  readInput.ts  returnType.ts
(+85 files in other folders)
