[package]
name = "aoc_2015_04"
version = "0.1.0"
authors = ["YearOfDev"]
edition = "2024"

[[bin]]
name = "solution"
path = "solution.rs"

[dependencies]
aoc_utils = { path = "../../../utils/rust/aoc_utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
md-5 = "0.10.6"
